--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,56 @@
     --color-body: #918ca4;
 }
 
-.box {
-    background-color: var(--color-secondary);
-    width: 100px;
-    height: 100px;
+
+/* Typography */
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: Inter;
+    color: var(--color-body);
+    font-size: 2.4rem;
+    line-height: 1.5;
+}
+
+h1, h2, h3 {
+    color: var(--color-headings);
+}
+
+h1 {
+    font-size: 7rem;
+}
+
+h2 {
+    font-size: 4rem;
+}
+
+h3 {
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+
+p {
+    margin-top: 0;
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        font-size: 1.8rem;
+    }
+
+    h1 {
+        font-size: 8rem;
+    }
+    
+    h2 {
+        font-size: 4rem;
+    }
+    
+    h3 {
+        font-size: 2.4rem;
+        margin-bottom: 10px;
+    }
+    
 }
