--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ a {
     border-radius: 20px;
     padding: 0.5rem 2rem;
     font-weight: 600;
-    word-spacing: nowrap;
+    white-space: nowrap;
     font-size: 2rem;
 }
 
@@ -113,6 +113,7 @@ a {
 
 .badge--small {
     font-size: 1.6rem;
+    padding: 0.5rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -159,9 +160,20 @@ a {
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
 }
+
+.icon--white {
+    fill: #fff;
+}
+
+
 
 .icon-container {
     background: #f3f0fa;
@@ -171,6 +183,10 @@ a {
     display: inline-flex;
     align-items: center;
     justify-content: center;
+}
+
+.icon-container--accent {
+    background: var(--color-accent)
 }
 
 
@@ -293,3 +309,176 @@ a {
     background: var(--color-secondary);
     color: #fff;
 }
+
+.card--secondary .badge--secondary {
+    background: #02cdf1
+}
+
+/* Plan */
+.plan__name {
+    color: #fff;
+    margin: 0;
+    font-weight: 500;
+    font-size: 2.4rem;
+}
+
+.plan__price {
+    font-size: 6rem;
+}
+
+.plan__billing-cycling {
+    font-size: 2.4rem;
+    font-weight: 300;
+    opacity: 0.8;
+    margin: 1rem;
+}
+
+.plan__description {
+    font-weight: 300;
+    font-size: 2rem;
+    display: block;
+    letter-spacing: 1px;
+}
+
+.plan .list__item {
+    margin-bottom: 2rem;
+}
+
+.plan--popular .card__header {
+    position: relative;
+}
+
+.plan--popular .card__header::before {
+    content: url(../images/popular.svg);
+    width: 40px;
+    display: inline-block;
+    position: absolute;
+    top: -25px;
+    right: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+    .plan__name {
+        font-size: 1.4rem;
+    }
+    .plan__price {
+        font-size: 5rem;
+    }
+    .plan__billing-cycling {
+        font-size: 1.6rem;
+    }
+    .plan__description {
+        font-size: 1.7rem;
+    }
+}
+
+
+/* Media */
+.media {
+    display: flex;
+}
+
+.media__title {
+    margin-top: 0;
+}
+
+.media__body {
+    padding: 0 2rem;
+}
+
+.media__image {
+    margin-top: 1rem;
+}
+
+
+/* Quotes */
+.quote {
+    font-size: 3rem;
+    font-style: italic;
+    color: #5c5577;
+}
+
+.quote__text::before {
+    content: open-quote;
+}
+
+.quote__text::after {
+    content: close-quote;
+}
+
+.quote__author {
+    font-size: 3rem;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 0;
+}
+
+.quote__company {
+    opacity: .4;
+    color: var(--color-headings);
+    font-size: 2rem;
+    font-style: normal;
+}
+
+.quote__line {
+    position: relative;
+    bottom: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+    .quote {
+        font-size: 2rem;
+    }
+    .quote__author {
+        font-size: 2.4rem;
+    }
+    .quote__company {
+        font-size: 1.6rem;
+    }
+}
+
+
+/* Grid */
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--col-2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
+/* Testimonials */
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial__image {
+    position: relative;
+}
+
+.testimonial__image > img{
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author {
+        font-size: 2.4rem;
+    }
+
+    .testimonial .quote {
+        margin-left: 6rem;
+    }
+}
+
+
+
